chore: add folder src

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,10 @@
   "license": "ISC",
   "author": "",
   "type": "module",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec tsx index.ts"
+    "dev": "nodemon --exec tsx src/index.ts"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
