--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^5.0.5",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^25.0.3",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
